# BendingMachineSimulator

./: CMakeLists.txt  main.cpp
headers/: Analyzer.h  Bar.h  BarFactory.h  Essential.h  Machine.h  MachineFactory.h  MachineRenderer.h  MachineWorker.h  MainMenu.h  Piston.h  Point.h  Segment.h  SegmentStates.h  Sensor.h  Shaft.h
